TOB-6567: Inkluder "belop" i API-responser
