# src/main/resources/openapi/rapport-v1.yaml
@@ -366,6 +366,13 @@ components:
 
             Satt for `ref-arbg` og `trekk-kred`. Ikke satt for `trekk-hend` (T12).
           example: "12345678901"
+        belop:
+          type: "number"
+          description: |
+            Utbetalt beløp, i norske kroner.
+            
+            Satt for `ref-arbg` og `trekk-kred`. Ikke satt for `trekk-hend` (T12).
+          example: 1000.00
         opprettet:
           $ref: "#/components/schemas/Instant"
           description: Tidspunktet rapporten ble opprettet/tilgjengeliggjort i systemet.
